# crowdcontrol

./: .dockerignore  .gitignore  .goreleaser.yml  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  SPEC.md  crowdcontrol.go  crowdcontrol_test.go  docker-compose.yml  go.mod
.github/workflows/: conformance.yml  go.yml  pages.yml  release.yml
.goreleaser/: Dockerfile
cmd/cc/: main.go  serve.go  serve_test.go
cmd/cc-lsp/: main.go
cmd/cc-wasm/: main.go
conformance/: README.md
conformance/suite/: 001_basic_forbid.json  002_forbid_does_not_fire.json  003_warn.json  004_permit_fires.json  (+26 more)
docs/: cli.html  comparison.html  conditions.html  conformance.html  embedding.html  examples.html  explain.html  index.html  installation.html  introduction.html  language.html  playground.html  quickstart.html  schema.html  sdks.html  serve.html  when-to-use.html
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/crowdcontrol/: config.toml  highlights.scm
editors/zed/src/: crowdcontrol.rs
evaluator/: evaluator.go  evaluator_test.go  validate.go  validate_test.go
examples/: quickstart.cc  schema.json
parser/: lexer.go  lexer_test.go  parser.go  parser_test.go
scripts/: build-playground-wasm.sh  install-zed-extension.sh
sdks/: README.md  run-conformance.sh
sdks/python/: Dockerfile  README.md  conformance_runner.py  pyproject.toml
sdks/python/crowdcontrol/: __init__.py  evaluator.py  lexer.py  parser.py  types.py  validate.py
sdks/python/examples/: demo.py
sdks/python/tests/: test_evaluator.py  test_lexer.py  test_parser.py  test_validate.py
tree-sitter-crowdcontrol/: README.md  grammar.js  package.json
types/: types.go
(+91 files in other folders)
