[package]
name = "zed-crowdcontrol"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/crowdcontrol.rs"
crate-type = ["cdylib"]

[dependencies]
# Zed extension API. The version pin here should match the
# extension.toml [lib] version so the host and the extension
# agree on the ABI.
zed_extension_api = "0.7"
