[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdcontrol"
version = "0.1.0"
description = "CrowdControl policy language — pure-Python SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mike Mackintosh" }]
requires-python = ">=3.10"
keywords = ["policy", "crowdcontrol", "gating", "authorization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# Zero runtime dependencies — stdlib only.
dependencies = []

[project.urls]
Homepage = "https://github.com/mikemackintosh/crowdcontrol"
Documentation = "https://github.com/mikemackintosh/crowdcontrol/blob/main/SPEC.md"
Repository = "https://github.com/mikemackintosh/crowdcontrol"
Issues = "https://github.com/mikemackintosh/crowdcontrol/issues"

[tool.setuptools.packages.find]
include = ["crowdcontrol*"]
exclude = ["tests*"]
